# religion-data

./: .gitignore  README.md  make_transcripts_rds.R  pyproject.toml  religion_census.md
data/appointments/: bwc_appointments_2026.csv
data/census/: 2020_USRC_book_Tables_1-4.xlsx  maryland_arda.csv
docs/: CCES24_Common_post.docx  CCES24_Common_pre.docx
raw_html/: 2026 Appointments _ Baltimore-Washington Conference UMC.html  Bulletin.html  FLOCKNOTE and e-bulletin - St. Hugh of Grenoble Catholic Church - Greenbelt, MD.html  https___ascensionbowie.org_bulletins.html
scrapers/ats/: scraper.py
scrapers/bulletins/: catholic_bulletins.py
scrapers/bwc/: bwc_appointments.R  bwc_appt.R
scrapers/mega/: scraper.py
sermons/: download_kettering_baptist.py  import_cheverly_baptist.py  import_kettering_baptist.py  scrape_cheverly_baptist.py  scrape_hyattsville_mennonite.py  scrape_pbuuc.py
sermons/bethel_baptist_text/: 01-05-2025 - Dependent Prayer.txt  01-12-2025 - Did God Make a Mistake.txt  01-26-2025 - Is God Unfair.txt  02-02-2025 - Is God Consistent.txt  02-09-2025 - Revealing Secrets.txt  02-16-2025 - Receiving God's Righteousness.txt  02-23-2025 - Being a Biblical Neighbor.txt  02-25-2024 - Baptismal Service.txt  03-02-2025 - The Gospel Unlocks History.txt  03-09-2025 - Openly Declaring Christ.txt  03-16-2025 - The Body of Christ.txt  03-23-2025 - A Parent's Treatment Of A Wayward Child.txt  03-30-2025 - God's Wise Amazing Plan.txt  04-13-2025 - Awed by Greatness.txt  (+770 more)
umdata/: church_scraper.py  people_scraper.py  scraper.py  stats.py  work_history_scraper.py
(+13048 files in other folders)
