[project]
name = "religion-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "mutagen>=1.47.0",
    "natural-pdf>=0.6.2",
    "pyside6>=6.11.1",
    "requests>=2.32.5",
]
